--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   },
   "dependencies": {
     "core-js": "^3.4.3",
+    "js-cookie": "^2.2.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mint-ui": "^2.2.13",
     "normalize.css": "^8.0.1",
-    "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
@@ -38,6 +38,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "vue": "^2.6.11",
+    "vue-resource": "^1.5.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
