--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "less-loader": "^5.0.0",
     "mint-ui": "^2.2.13",
     "normalize.css": "^8.0.1",
+    "vant": "^2.5.3",
     "vue-awesome-swiper": "^2.6.7",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
