--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-resource": "^1.5.1",
     "vue-template-compiler": "^2.6.10"
   },
