--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "query-string": "^6.12.1",
     "vue": "^2.6.11",
     "vue-lazyload": "^1.3.3",
     "vue-resource": "^1.5.1",
